== 2.19.0
* Adds verification search

== 2.18.0
* Additional card information, such as prepaid, debit, commercial, Durbin regulated, healthcare, and payroll, are returned on credit card responses
* Allows transactions to be specified as recurring

== 2.17.0
* Adds prepaid attribute to credit cards (possible values: Yes, No, Unknown)

== 2.16.0

* Adds webhook gateways for parsing, verifying, and testing incoming
notifications
* Adds Transaction.refund!(id, amount = nil)

== 2.15.0

* Adds unique_number_identifier attribute to CreditCard

== 2.14.0

* Adds search for duplicate credit cards given a payment method token
* Adds flag to fail saving credit card to vault if card is duplicate

== 2.13.4

* Allows both url encoded and decoded query string and hash

== 2.13.3

* Exposes plan_id on transactions
* Fixes GitHub issue #19 - Unescapes escaped characters in query string

== 2.13.2

* Added error code for invalid purchase order number
* Changes transparent redirect query string regexp to allow hash to appear
anywhere in params string

== 2.13.1

* Made the production endpoint configurable

== 2.13.0

* Added new error code for merchant accounts that do not support refunds
* Added GEMSPEC file

== 2.12.0

* Added ability to retrieve all Plans, AddOns and Discounts
* Added Transaction cloning

== 2.11.0

* Added SettlementBatchSummary

== 2.10.2

* Added support for international Maestro cards with payer authentication

== 2.10.1

* Support builder >= 2.0
* Changed comments to point to new doc site

== 2.10.0

* Added subscription_details to Transaction
* Added flag to store in vault only when a transaction is successful
* Added new error code

== 2.9.1

* Added a new transaction state, AuthorizationExpired.
* Enabled searching by authorization_expired_at.

== 2.8.0

* Added next_billing_date and transaction_id to subscription search
* Added address_country_name to customer search
* Added new error codes

== 2.7.0
