@@ -20,7 +20,7 @@ module Braintree
     def self.parse_query_string(qs)
       qs.split('&').inject({}) do |result, couplet|
         pair = couplet.split('=')
-        result[CGI.unescape(pair[0]).to_sym] = CGI.unescape(pair[1])
+        result[CGI.unescape(pair[0]).to_sym] = CGI.unescape(pair[1] || '')
         result
       end
     end
