@@ -1,3 +1,5 @@
+* Added ability to allow TR query parameters with no value (thanks @dmathieu!)
+
 == 2.19.0
 * Adds verification search
 
